Skip to content

Removing record button from advanced controls makes the toolbar disappear

Windows 7 Ulitmate 64bit VLC 2.2.0, also occurs in nightly build 3.0.0-20150317-1517 Normal Error

If you remove the record button in line 1 of "Customize interface", the Advanced Controls option stops working properly. After saving your settings (with record button removed) the advanced controls disappear from the interface. When you go into View, it shows that "Advanced Controls" is still checked/enabled. If you try to disable it, nothing happens - the option is still checked.

I uninstalled (erasing cache and options) and re-installed to the latest version and was able to replicate this issue. Here are the steps:

  1. Enable Advanced Controls in View
  2. Open Customize Interface
  3. Remove the record button from "Line 1:"
  4. Close the toolbar editor and you will see the Advanced Controls have disappeared
  5. Go into View, you will see that "Advanced Controls" is still checked and you can no longer uncheck the option, it is locked/frozen to checked.
  6. Uninstall VLC including cache/settings, reinstall and everything works again until you remove the record button.
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information