gui/qt: disable "Advanced controls" item if none availble

If the user disabled the advanced controls widgets in the
interface customization options, it would still show the
menu item for them, but interactions with the menu item
would just do nothing.

Instead properly disable the menu item when there is no
advanced buttons widget to show/hide.

Ref: #14217